[package]
name = "hud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hudsucker = { version = "0.18.0" }
color-eyre = "0.6.2"
env_logger = "0.9.0"
log = "0.4.17"
rcgen = "0.9.3"
rustls-pemfile = "1.0.1"
tokio = { version = "1.20.1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "signal",
] }

# reqwest-impersonate = { path = "../reqwest", default-features = false, features = [
#     "chrome",
# ] }

reqwest-impersonate = { git = "https://github.com/4JX/reqwest-impersonate", rev = "83af401",default-features = false, features = [
    "chrome",
] }

base64 = "0.13.0"
itertools = "0.10.3"
# cached = "0.38.0"
# cached = { path = "../cached" }
# Waiting on https://github.com/jaemk/cached/pull/129
cached = {git = "https://github.com/4JX/cached",rev ="87ad459"}
thiserror = "1.0.32"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
# error-stack = "0.1.1"
# Switch to crates.io once 0.2.0 lands and fixes the compilation issues
error-stack = { git = "https://github.com/hashintel/hash.git", rev = "ea0dacf" }
sha1 = "0.10.2"
hex = "0.4.3"


[patch.crates-io]
hyper = { git = "https://github.com/4JX/hyper.git", branch = "0.14.x-patched", ref = "78b4567" }
# hyper = { path = "../hyper" }
h2 = { git = "https://github.com/4JX/h2.git", branch = "test", ref = "b088466" }
# h2 = { path = "../h2" }
